 - Documentation improvement: Link back to Service class from method parameters classes (castaway)
 - Documentation improvement: New way of rendering parameters to methods (avoids very long method signatures in TOCs). This
   also fixes the fact that search.cpan.org didn't like very long lines in its TOC, so was not putting some methods in the
   TOC (castaway)
 - New API: Pricing
 - New API: CostExplorer
 - New API: Translate
 - New API: ServerlessRepo
 - New APIs: SageMaker and SageMakerRuntime
 - New APIs: MediaConvert, MediaLive, MediaPackage, MediaStore, MediaStoreData
 - New APIs: KinesisVideo, KinesisVideoMedia, KinesisVideoArchivedMedia
 - New API: MQ
 - New API: ResourceGroups
 - New API: GuardDuty
 - New API: Comprehend
 - New API: Cloud9
 - New API: AppSync
 - New API: AlexaForBusiness
 - New API: ServiceDiscovery
 - New API: WorkMail
 - New API: Transcribe
 - New API: AutoScalingPlans
 - New API: Connect
 - New API: ACMCPA
 - New API: FMS
 - New API: SecretsManager
 - New API: IoTAnalytics
 - API update: IoT
 - API update: Shield
 - API update: Rekognition
 - API update: Route53
 - API update: Glue
 - API update: Organizations
 - API update: CodeBuild
 - API update: StepFunctions
 - API update: WorkDocs
 - API update: CloudFormation
 - API update: Firehose
 - API update: Kinesis
 - API update: StorageGateway
 - API update: EMR
 - API update: XRay
 - API update: ACM
 - API update: S3
 - API update: ApiGateway
 - API update: ApplicationAutoscaling
 - API update: ECS
 - API update: EC2
 - API update: ELBv2
 - API update: OpsWorksCM
 - API update: WAFRegional
 - API update: WAF
 - API update: SQS
 - API update: SES
 - API update: ES
 - API update: CodeCommit
 - API update: ECR
 - API update: RDS
 - API update: DMS
 - API update: ElasticBeanstalk
 - API update: Lightsail
 - API update: SSM
 - API update: Pinpoint
 - API update: DirectConnect
 - API update: ApiGateway
 - API update: CloudFront
 - API update: Glue
 - API update: ElastiCache