@@ -9,6 +9,8 @@
  - Documentation improvement: New way of rendering parameters to methods (avoids very long method signatures in TOCs). This
    also fixes the fact that search.cpan.org didn't like very long lines in its TOC, so was not putting some methods in the
    TOC (castaway)
+ - Json services will now return the code of the exception as the message of the exception if no message was found (instead
+   of 'unrecognized error format')
  - New API: Pricing
  - New API: CostExplorer
  - New API: Translate
